Added changes to frontend files
